# ledger-fortress

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  publish-check.yml  sentry-check.yml
client/python/: README.md  pyproject.toml
client/python/ledger_fortress/: __init__.py  fortress.py
client/typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
client/typescript/src/: index.ts  stripe.ts
client/typescript/test/: e2e-simulation.ts  ledger.test.ts  stripe.test.ts
docs/: INVARIANTS.md  architecture.md  babysea-provenance.md  concurrency-tests.md  crash-recovery.md  edge-cases.md  stripe-event-matrix.md  stripe-integration.md
examples/concurrency-simulation/: README.md  reserve-race.ts
examples/docker-compose-local/: README.md  docker-compose.yml
examples/python-sdk-demo/: README.md  demo.py
examples/real-stack-smoke/: README.md  validate.py
examples/typescript-sdk-demo/: README.md  demo.ts  package-lock.json
migrations/: 001_credits.sql  002_credit_alerts.sql  003_security.sql  004_clawback_and_trueup.sql
schemas/: credit-event.v1.json
scripts/: sentry-project-check.mjs  verify-anon-denied.sh
test/: e2e-simulation.ts
